Used EJS Mate to add boiler plate to all the ejs templates

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Campgrounds</title>
-    <meta name='viewport'
-        content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link href="" rel="stylesheet">
-</head>
-
-<body>
+<% layout('./layouts/boilerplate') %>
     <h1>All Campgrounds</h1>
     <h4><a href="/campgrounds/new">Create New Campground</a></h4>
     <ul>
@@ -27,6 +13,3 @@
             </li>
             <% }%>
     </ul>
-</body>
-
-</html>
