--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Examples</title>
-    <meta name='viewport'
-        content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link href="" rel="stylesheet">
-</head>
-
-<body>
+<% layout('./layouts/boilerplate') %>
     <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="post">
         <label for="title">Title: </label>
         <input type="text" id="title" name="campground[title]" value="<%=campground.title%>">
@@ -25,6 +11,3 @@
     <footer>
         <a href="/campgrounds">Back to all campgrounds</a>
     </footer>
-</body>
-
-</html>
