--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Examples</title>
-    <meta name='viewport'
-        content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link href="" rel="stylesheet">
-</head>
-
-<body>
+<% layout('./layouts/boilerplate') %>
     <h1>
         <%= campground._id%>
     </h1>
@@ -29,6 +15,3 @@
     <footer>
         <a href="/campgrounds">Back to all campgrounds</a>
     </footer>
-</body>
-
-</html>
