--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,15 +1,28 @@
 <% layout('./layouts/boilerplate') %>
-    <h1>All Campgrounds</h1>
-    <h4><a href="/campgrounds/new">Create New Campground</a></h4>
-    <ul>
-        <% for(let campground of campgrounds) {%>
-            <li>
-                Title: <%= campground.title %>, Location: <%= campground.location %>,
-                        <a href="/campgrounds/<%=campground._id%>">show</a>,
-                        <a href="/campgrounds/<%=campground._id%>/edit">edit</a>,
-                        <form action="/campgrounds/<%=campground._id%>?_method=delete" method="post">
-                            <button>Delete</button>
+    <% for(let campground of campgrounds) {%>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="<%=campground.image%>" class="img-fluid h-100" alt="Image not found">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%=campground.title%>
+                        </h5>
+                        <p class="card-text">
+                            <%=campground.desc%>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted"><%=campground.location%></small>
+                        </p>
+                        <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">Show</a>
+                        <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">edit</a>
+                        <form action="/campgrounds/<%=campground._id%>?_method=delete" class="d-inline" method="post">
+                            <button class="btn btn-danger">Delete</button>
                         </form>
-            </li>
-            <% }%>
-    </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <% }%>
