--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,10 +1,36 @@
 <% layout('./layouts/boilerplate') %>
-    <form action="/campgrounds" method="post">
-        <label for="title">Title: </label>
-        <input type="text" id="title" name="campground[title]">
-        <br>
-        <label for="location">Location: </label>
-        <input type="text" id="location" name="campground[location]">
-        <br>
-        <button type="submit">Create</button>
-    </form>
+    <div class="row">
+        <h1 class="text-center">New Campground</h1>
+        <div class="col-6 offset-3">
+            <form action="/campgrounds" method="post">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title </label>
+                    <input class="form-control" type="text" id="title" name="campground[title]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location </label>
+                    <input class="form-control" type="text" id="location" name="campground[location]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image Url </label>
+                    <input class="form-control" type="text" id="image" name="campground[image]">
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">&#8377;</span>
+                    </div>
+                    <input type="number" class="form-control" id="price" name="campground[price]" placeholder="Price">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="desc">Description </label>
+                    <textarea class="form-control" type="text" id="desc" name="campground[desc]"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success" type="submit">Add Campground</button>
+                </div>
+            </form>
+        </div>
+    </div>
