--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,31 +2,31 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%=campground._id%>?_method=put" method="post">
+            <form action="/campgrounds/<%=campground._id%>?_method=put" method="post" class="validated-form" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title </label>
-                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>">
+                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location </label>
-                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>">
+                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>">
+                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>" required>
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">&#8377;</span>
                     </div>
-                    <input type="number" class="form-control" id="price" name="campground[price]" value="<%=campground.price%>">
+                    <input type="number" class="form-control" id="price" name="campground[price]" value="<%=campground.price%>" required>
                     <div class="input-group-append">
                         <span class="input-group-text">.00</span>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="desc">Description </label>
-                    <textarea class="form-control" type="text" id="desc" name="campground[desc]"><%=campground.desc%></textarea>
+                    <textarea class="form-control" type="text" id="desc" name="campground[desc]" required><%=campground.desc%></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-info" type="submit">Update Campground</button>
