--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,31 +2,31 @@
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="post">
+            <form action="/campgrounds" method="post" class="validated-form" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title </label>
-                    <input class="form-control" type="text" id="title" name="campground[title]">
+                    <input class="form-control" type="text" id="title" name="campground[title]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location </label>
-                    <input class="form-control" type="text" id="location" name="campground[location]">
+                    <input class="form-control" type="text" id="location" name="campground[location]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]">
+                    <input class="form-control" type="text" id="image" name="campground[image]" required>
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">&#8377;</span>
                     </div>
-                    <input type="number" class="form-control" id="price" name="campground[price]" placeholder="Price">
+                    <input type="text" class="form-control" id="price" name="campground[price]" placeholder="Price" required>
                     <div class="input-group-append">
                         <span class="input-group-text">.00</span>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="desc">Description </label>
-                    <textarea class="form-control" type="text" id="desc" name="campground[desc]"></textarea>
+                    <textarea class="form-control" type="text" id="desc" name="campground[desc]" required></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success" type="submit">Add Campground</button>
