--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-8 mx-auto">
             <div class="alert alert-danger" role="alert">
-                <h4 class="alert-heading text-wrap">
+                <h4 class="alert-heading text-wrap text-break">
                     <%=err.message%>
                 </h4>
                 <p>Aww yeah u got a fcking error. Now go fck urself.</p>
