Serviing static assests and configured sessions

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-6">
-            <form action="/campgrounds/<%=campground._id%>/review" method="POST" novalidate>
+            <form action="/campgrounds/<%=campground._id%>/review" class="validated-form" method="POST" novalidate>
                 <h3>Leave A Review</h3>
                 <div class="mb-3">
                     <label class="form-lablel" for="reviewRating">Rating</label>
