--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,19 +15,24 @@
                     <li class="list-group-item text-muted">
                         <%=campground.location%>
                     </li>
+                    <li class="list-group-item text-muted">
+                        Submitted by <%=campground.author.username%>
+                    </li>
                     <li class="list-group-item">Price:
                         <%=campground.price%>
                     </li>
                 </ul>
-                <div class="card-body">
-                    <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">edit</a>
-                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=delete" method="post">
-                        <button class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
-                </div>
+                <%if(currUser && campground.author.equals(currUser._id)) {%>
+                    <div class="card-body">
+                        <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">edit</a>
+                        <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=delete" method="post">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
+                        <div class="card-footer text-muted">
+                            2 days ago
+                        </div>
             </div>
         </div>
         <div class="col-6">
@@ -39,7 +44,8 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="reviewBody">Review</label>
-                    <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="2" required></textarea>
+                    <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="2"
+                        required></textarea>
                 </div>
                 <button class="btn btn-success mb-3">Submit</button>
             </form>
@@ -54,7 +60,8 @@
                             Review:
                             <%= review.body %>
                         </p>
-                        <form action="/campgrounds/<%=campground._id%>/review/<%=review._id%>?_method=delete" method="POST"><button class="btn btn-sm btn-danger">Delete</button></form>
+                        <form action="/campgrounds/<%=campground._id%>/review/<%=review._id%>?_method=delete"
+                            method="POST"><button class="btn btn-sm btn-danger">Delete</button></form>
                     </div>
                 </div>
                 <% } %>
